<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewProductActivity">

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="293dp"
        android:layout_height="243dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/product_image_description"
        android:onClick="getImage"
        android:src="@drawable/ic_new_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/productNameEditText"
        android:layout_width="291dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/product_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/productImageView"
        app:layout_constraintStart_toStartOf="@+id/productImageView"
        app:layout_constraintTop_toBottomOf="@+id/productImageView"
        tools:text="Product Name" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="286dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/product_price_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/productImageView"
        app:layout_constraintStart_toStartOf="@+id/productImageView"
        app:layout_constraintTop_toBottomOf="@+id/productNameEditText"
        tools:text="Product Price" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:onClick="addProduct"
        android:text="@string/add_button_text"
        app:layout_constraintEnd_toEndOf="@+id/productImageView"
        app:layout_constraintStart_toStartOf="@+id/productImageView"
        app:layout_constraintTop_toBottomOf="@+id/priceEditText"
        tools:text="Add" />
</android.support.constraint.ConstraintLayout>